# cadical

data_aggregator/: Cargo.toml  plot_data.py
data_aggregator/sender/: sender  sender.c
data_aggregator/src/: main.rs
scripts/: download_instances.sh  plot_lbd_stats.py
src/: analyze.cpp  backtrack.cpp  cadical.cpp  cadical.hpp  cema.cpp  cema.hpp  clause.cpp  clause.hpp  clause_lbd_stats.hpp  clause_ldb_stats.cpp  compact.cpp  cover.cpp  ema.cpp  ema.hpp  external.cpp  external.hpp  import.cpp  instantiate.cpp  internal.cpp  internal.hpp  options.hpp  probe.cpp  propagate.cpp  reduce.cpp  restart.cpp  solver.cpp  stats.hpp  trail_sample.cpp  trail_sample.hpp  vivify.cpp  walk.cpp
