[package]
name = "data_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
sysinfo = "0.25.3"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "io-util", "net", "macros", "io-std", "fs", "signal", "sync", "process", "time", "parking_lot"] }
